--- a/index.html
+++ b/index.html
@@ -569,6 +569,57 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 
 <img src= "mascotlie.png" class = "center">
 
+<div class="container">
+	<h1>40 Tips for Rock Climbing</h2>
+
+Stepping using tip of shoe <br>
+keeping arms straight <br>
+staying close to the wall, especially hips <br>
+looking at hands and feet as you place them<br>
+stepping on holds silently<br>
+reading the route from the ground, prepares neurons for firing quickly and in sync<br>
+using same side-foot to reach with a hand<br>
+turning away from the direction you are reaching<br>
+drop knees<br>
+hand matching<br>
+
+minimizing the force you use to grab holds<br>
+foot matching<br>
+how to use hold types: slopers (meat hooking), jugs, crimps (open crimp), pinchers, finger pockets (use middle 2 fingers when possible. can alternate to save energy)<br>
+using your thumb whenever you can<br>
+not readjusting when you place a foot/hand down<br>
+maximizing the number of fingers on holds<br>
+making room to put both hands on holds<br>
+balancing use leg to counterbalance<br>
+memorizing holds underneath ledges<br>
+
+smearing<br>
+flagging - using side of foot instead of front of foot<br>
+mantling<br>
+heel hooking - point toe down to lock it if knee is against the wall. have knee pointing away from wall if the hold is high up<br>
+toe hooking - more about using core tension than using leg muscles<br>
+dynos - straight arm vs bent arm dynos depending on steepness. look at the target hold while in the air. bend your arms to control the swing<br>
+knee locks - adjusting angle of shin bone to make it fit<br>
+camming - simultaneously toe hooking and heel hooking with a foot inside a "crack"<br>
+bicycles - stepping on a hold with one foot and toe hooking with the other<br>
+
+using opposition to stay on wall (expansion or compression)<br>
+reading chalk and rubber on the holds<br>
+using momentum from eccentric movements vs static<br>
+using bolt holes on holds<br>
+using aretes<br>
+using volumes (stepping on outermost portion to keep body angled into wall)<br>
+pogos for stepping off opposite-side foot<br>
+pointing your toe down on holds that are angled down<br>
+head momentum - throwing your head into the wall<br>
+start with non-stepping foot as close to wall as possible<br>
+
+personal tips:<br>
+use warm up to calibrate to check feet are taking as much weight as possible<br>
+sync breathing with movements<br>
+most important muscles to train: trapezius, rhomboids, triceps, lats<br>
+</div>
+
 <div class="container" id="p1">
 <div class="page-header"> 
 	<h1 class="bg-info"> Chest </h1>
