--- a/projpage3.html
+++ b/projpage3.html
@@ -17,7 +17,7 @@
 
 <ol>
 <li>Using the drop down menu under Accounts, select the Account ID of the account you would like to withdraw/deposit with. </br>
-<img src= "proj8.png" border="2">
+<img src= "assets/proj8.png" border="2">
 
 </li>
 <li>Enter how much you would like to deposit/withdraw in the box under Amount.</li>
@@ -34,13 +34,13 @@
 <li>Attempting to withdraw from a savings account too many times within a month.</li>
 </li>
 </ul>
-<img src="proj2.png" border="2">
+<img src="assets/proj2.png" border="2">
 
 </ol>
 </div>
-<div align="center">
-<a href = "index.html"><h3>Home</h3></a>
 
+<div align="center">
+<a href = "bankingapp.html"><h3>Back to Manual Home</h3></a>
 </div>
 
 
