--- a/projpage4.html
+++ b/projpage4.html
@@ -16,30 +16,30 @@
 
 <ol>
 <li>Click "View Accounts". </br>
-<img src= "proj8.png" border="2">
+<img src= "assets/proj8.png" border="2">
 
 </li>
 <li>Enter a number into the box under "Choose the minimum." This will allow you to see which accounts, checking and savings, have at least that balance. </br>
-<img src="proj10.png" border="2">
+<img src="assets/proj10.png" border="2">
 
 </li>
 <li>Press "OK."</li>
 <li>Select which type of accounts you would like to view, checking or savings, from the drop-down menu. This will allow you to see how many accounts exist of that type. </br>
-<img src="proj11.png" border="2">
+<img src="assets/proj11.png" border="2">
 
 </li>
 <li>Press "OK."</li>
 <li>The following information will display: all account data, the number of total accounts, accounts that meet the minimum balance that you specified, and the number of accounts that are of the type you specified. </li>
 <li>A screen like this will appear:</li>
 
-<img src="proj6.png"></br>
-<img src="proj4.png"></br>
-<img src="proj7.png"></br>
+<img src="assets/proj6.png"></br>
+<img src="assets/proj4.png"></br>
+<img src="assets/proj7.png"></br>
 
 </ol>
 </div>
 <div align="center">
-<a href = "index.html"><h3>Home</h3></a>
+<a href = "bankingapp.html"><h3>Back to Manual Home</h3></a>
 
 
 </div>
