--- a/projpage2.html
+++ b/projpage2.html
@@ -15,24 +15,24 @@
 
 <ol>
 <li>Click "Add Accounts."</br>
-<img src= "proj8.png" border="2">
+<img src= "assets/proj8.png" border="2">
 
 </li>
 <li>Select the type of account you want to create. </br>
-<img src="proj9.png" border="2">
+<img src="assets/proj9.png" border="2">
 </li>
 <li>An account of the selected type will be created.
 
 
 </li>
 <li>A screen will appear indicating the new account's ID number, owner name, type, and balance. If it is a checking account, it also shows the overdraft fee that will be incurred if the account balance becomes negative. If it is a savings account, it will show the minimum required balance, current monthly withdrawals (0), and max monthly withdrawals.</li>
-<img src="proj1.png" border="2">
+<img src="assets/proj1.png" border="2">
 
 
 </ol>
 </div>
 <div align="center">
-<a href = "index.html"><h3>Home</h3></a>
+<a href = "bankingapp.html"><h3>Back to Manual Home</h3></a>
 </div>
 
 
