--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <a href = "tradingalgo.html"><h3 align="center">Trading Algorithm </br>(Python + Quantopian)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
-<a href = "http://chalkwings.com"><h3 align="center">Rock Climbing Training Website </br>(HTML + CSS + Javascript)</h3></a>
+<a href = "oldindex.html"><h3 align="center">Rock Climbing Training Website </br>(HTML + CSS + Javascript)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
 <a href = "climbingmobile.html"><h3 align="center">Climbing Mobile App</br> (Swift)</h3></a>
