--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 <h2> Latest Work // </h2>
 </div>
 
-<div class="column" style="background-color:lightblue">
+<div class="column2" style="background-color:lightblue">
 <a href = "bankingapp.html"><h3 align="center">Banking Application </br> (Java)</h3></a>
 </div>
-<div class="column" style="background-color:lightblue">
-<a href = "doc/index.html"><h3 align="center">Banking Application Documentation </br> (Java)</h3></a>
-</div>
-<div class="column" style="background-color:lightblue">
+<div class="column2" style="background-color:lightblue">
 <a href = "tradingalgo.html"><h3 align="center">Trading Algorithm </br>(Python + Quantopian)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
