--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <a href = "bankingapp.html"><h3 align="center">Banking Application </br> (Java)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
-<a href = "tradingalgo.html"><h3 align="center">Trading Algorithm </br>(Python + Quantopian)</h3></a>
+<a href = "tradingalgo.html"><h3 align="center">Moving Average Trading Algorithm </br>(Python + Quantopian)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
-<a href = "oldindex.html"><h3 align="center">Rock Climbing Training Website </br>(HTML + CSS + Javascript)</h3></a>
+<a href = "oldindex.html"><h3 align="center">Training Website </br>(HTML + CSS + Javascript)</h3></a>
 </div>
 <div class="column2" style="background-color:lightblue">
-<a href = "climbingmobile.html"><h3 align="center">Climbing Mobile App</br> (Swift)</h3></a>
+<a href = "climbingmobile.html"><h3 align="center">Rock-Climbing iPhone Apps</br> (Swift)</h3></a>
 </div>
 
 
