--- a/tradingalgo.html
+++ b/tradingalgo.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="styles.css" />
-<title>Swift Apps</title>
+<title>Trading Algo</title>
 </head>
 <body>
 
 <div class="top">
-<h2 align= "center"> Demonstration of Python in Quantopian </h2>
+<h2 align= "center"> Python Trading Algorithm in Quantopian </h2>
 </div>
 
 <hr>
 <ol>
-<li>This is an example of an algorithm I created that buys securities when the short-term moving average line crosses the long-term one from below (golden cross) and sells them when the opposite occurs (death cross). The algorithm is written in Python and the electronic platform is called Quantopian.
-<ul>
+<li>This is a simplified trading algorithm I created that buys securities when their short-term moving-average line crosses the long-term one from below (golden cross) and sells them when the opposite occurs (death cross). The algorithm is written in Python and the electronic platform is called Quantopian.
+
+<ul>  
 <li>Alpha - (+) return in excess of what would be expected for the risk </li>
 <li>Beta - (+) returns usually have the same sign as the benchmark </li>
 <li>Sharpe - (+) risk-adjusted performance </li>
-
-
 </ul>
 
 </li>
 <img src="assets/quant1.png" class="largerimg">
 
-<li>This is additional output that is given when my algorithm is backtested.</li>
+<li>This is additional output that is given when my algorithm is backtested.
+  
+<ul>  
+<li>Structural Constraints - measures how many recommended APIs are being used </li>
+<li>Risk Constraints - measures how well the algo controls certain factors </li>
+</ul>
+</li>
 <img src="assets/quant2.png" class="largerimg">
 </ol>
 
