--- a/tradingalgo.html
+++ b/tradingalgo.html
@@ -11,7 +11,7 @@
 
 <hr>
 <ol>
-<li>This is a simplified trading algorithm I created that buys the entire universe of securities when their 10-day (short-term) moving-average line crosses the 50-day (long-term) one from below (golden cross) and sells them when the opposite occurs (death cross). The algorithm is written in Python and the electronic platform is called Quantopian.
+<li>This is a simplified trading algorithm I created that buys securities when their 10-day (short-term) moving-average line crosses their 50-day (long-term) one from below (called a golden cross) and sells all of them when the opposite occurs (called a death cross). The algorithm is written in Python and the electronic platform is called Quantopian.
 
 <ul>  
 <li>Alpha - (+) return in excess of what would be expected for the risk </li>
