--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 
 <div class="welcome">
 <h1 align="center"> Robert Ku </h1>
-<img class="homeimg" src="cw167.png">
 <hr>
 </div>
 <div>
 <h2> Latest Work // </h2>
 </div>
 
-<div class="column2" style="background-color:lightgray">
+<div class="column2" style="background-color:lightblue">
 <a href = "bankingapp.html"><h3 align="center">Banking Application </br> (Java)</h3></a>
 </div>
-<div class="column2" style="background-color: lightgray">
+<div class="column2" style="background-color: lightblue">
 <a href = "tradingalgo.html"><h3 align="center">Moving Average Trading Algorithm </br>(Python + Quantopian)</h3></a>
 </div>
-<div class="column2" style="background-color: lightgray">
+<div class="column2" style="background-color: lightblue">
 <a href = "oldindex.html"><h3 align="center">Training Website </br>(HTML + CSS + Javascript)</h3></a>
 </div>
-<div class="column2" style="background-color: lightgray">
+<div class="column2" style="background-color: lightblue">
 <a href = "climbingmobile.html"><h3 align="center">Rock-Climbing iPhone Apps</br> (Swift)</h3></a>
 </div>
 
