--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<img src="https://rjk79.github.io/tt/GardenMe.png" align="center" border="2">
+<img src="linkedinpic.jpeg" align="center" style="border-radius: 50%;">
 
 </body>
 </html>
