--- a/tradingalgo.html
+++ b/tradingalgo.html
@@ -10,27 +10,30 @@
 </div>
 
 <hr>
-<ol>
-<li>This is a simplified trading algorithm I created that buys securities when their 10-day (short-term) moving-average line crosses their 50-day (long-term) one from below (called a golden cross) and sells all of them when the opposite occurs (called a death cross). The algorithm is written in Python and the electronic platform is called Quantopian.
-
+<div id="description">
+<p align="center">A simplified trading algorithm that buys securities when their 10-day (short-term) moving-average line crosses their 50-day (long-term) one from below (called a golden cross) and sells all of them when the opposite occurs (called a death cross). The algorithm is written in Python on the electronic trading simulator called Quantopian.
+</p>
+</div>
+  
 <ul>  
-<li>Alpha - (+) return in excess of what would be expected for the risk </li>
-<li>Beta - (+) returns usually have the same sign as the benchmark </li>
-<li>Sharpe - (+) risk-adjusted performance </li>
+  <li>Alpha - (+) return in excess of what would be expected for the risk </li>
+  <li>Beta - (+) returns usually have the same sign as the benchmark </li>
+  <li>Sharpe - (+) risk-adjusted performance </li>
 </ul>
 
-</li>
+
 <img src="assets/quant1.png" class="largerimg">
 
-<li>This is additional output that is given when my algorithm is backtested.
+This is additional output that is given when my algorithm is backtested.
   
 <ul>  
 <li>Structural Constraints - measures how many recommended APIs are being used </li>
 <li>Risk Constraints - measures how well the algo controls certain factors </li>
 </ul>
-</li>
+  
+
 <img src="assets/quant2.png" class="largerimg">
-</ol>
+
 
 <div align="center">
 <a href = "index.html"><h3>Home</h3></a>
