--- a/bankingapp.html
+++ b/bankingapp.html
@@ -14,7 +14,7 @@
 <hr>
 
 <div id="description">
-<p align="center">A banking application that allows users to create either checking accounts or savings accounts. Checking accounts have an overdraft fee while savings account have a minimum balance and limit on the number of monthly withdrawals. </p>
+<p align="center">A banking application that allows users to create either checking accounts or savings accounts. Checking accounts have an overdraft fee while savings accounts have a minimum balance and limit the number of monthly withdrawals. </p>
 </div>
 
 <div class="column" style="background-color:lightblue">
