--- a/oldindex.html
+++ b/oldindex.html
@@ -230,7 +230,7 @@ body {
 </div>
 <div class="container" id="p0">
     <div class="page-header"> 
-	<h1 class="bg-info"> My Current Workout ;) </h1>
+	<h1 class="bg-info"> My Current Workout </h1>
 </div>
 	<!--
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
